syntax = "proto3";

package util;

enum RequestOperationTypeProto {
  UNKNOWN_OPERATION=0;

  //Validate whether an object is well-formed. The proto schema provides the syntax, but validation
  //ensures semantic meaning is correct.
  VALIDATE=1;

  //Create an object in the back-end
  CREATE=2;

  //Retrieve an object
  GET=3;

  //Search for an object
  SEARCH=4;
}
